edge: add mixtile edge sbc support
Signed-off-by: Han Pengfei <pengphei@qq.com>

--- a/scripts/Makefile.autoconf
+++ b/scripts/Makefile.autoconf
@@ -81,7 +81,12 @@ config_file=$(shell echo "$(srctree)/customer/board/configs/$(CONFIG_SYS_BOARD).
 # 4th. this is khadas config folder
 config_file=$(shell echo "$(srctree)/board/khadas/configs/$(CONFIG_SYS_BOARD).h")
 ifneq ($(config_file), $(wildcard $(config_file)))
+
+# 5th. this is mixtile config folder
+config_file=$(shell echo "$(srctree)/board/mixtile/configs/$(CONFIG_SYS_BOARD).h")
+ifneq ($(config_file), $(wildcard $(config_file)))
 $(error $(shell echo "Error: Can not find $(CONFIG_SYS_BOARD).h"))
+endif
 endif
 endif
 endif
